--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,6 @@
-REACT_APP_API_KEY=AIzaSyBZFECBjjZtpzKI6oQ9q6VONGprQfvzPTE
-REACT_APP_AUTH_DOMAIN=react-chat-app-e2cd2.firebaseapp.com
-REACT_APP_PROJECT_ID=react-chat-app-e2cd2
-REACT_APP_STORAGE_BUCKET=react-chat-app-e2cd2.appspot.com
-REACT_APP_MESSAGING_SENDER_ID=25940675745
-REACR_APP_APP_ID=1:25940675745:web:b16186454deb5f6f7974e0
+# API_KEY=AIzaSyBZFECBjjZtpzKI6oQ9q6VONGprQfvzPTE
+# AUTH_DOMAIN=react-chat-app-e2cd2.firebaseapp.com
+# PROJECT_ID=react-chat-app-e2cd2
+# STORAGE_BUCKET=react-chat-app-e2cd2.appspot.com
+# MESSAGING_SENDER_ID=25940675745
+# APP_ID=1:25940675745:web:b16186454deb5f6f7974e0
